foundation and classnames

--- a/public/index.html
+++ b/public/index.html
@@ -3,6 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <title></title>
+
+    <link rel="stylesheet" href="//cdn.jsdelivr.net/foundation/6.2.1/foundation.min.css">
 </head>
 <body>
 <main id="app"></main>
